change body class to allow custom overrides for desktop payload
git-svn-id: file:///srv/svn/publican/trunk@205 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/make/Makefile.common
+++ b/publican/make/Makefile.common
@@ -405,10 +405,11 @@ endif
 
 # TODO
 # Fix ghelp for O/S deployed books (xsl/spec2.xsl)
+spec:: DESKTOP = 1
 ifndef XML_DESKTOP
-spec: html-single-all tar_dir
+spec:: html-single-all tar_dir
 else
-spec: xml-all tar_dir
+spec:: xml-all tar_dir
 endif
 	@echo "START: spec `date`"
 	@rm -f tmp/subpackages.txt tmp/titles.txt tmp/changelog.txt
