lol, to many bash scripts, endif not fi :)
git-svn-id: file:///srv/svn/publican/trunk@206 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/make/Makefile.templates
+++ b/publican/make/Makefile.templates
@@ -349,7 +349,12 @@ define	TEST_Template
 .PHONY:	test-${1}
 test-${1}:: xml-${1}
 	@echo "START: test-${1} `date`"
-	@$(CATALOGS) xmllint  --noout --postvalid --xinclude tmp/${1}/xml/$(DOCNAME).xml
+ifeq "${1}" "$(findstring ${1},$(IGNORED_TRANSLATIONS))"
+	@echo "	Bypassing translation test for ${1}"
+	@cp -rf tmp/$(XML_LANG)/* tmp/${1}/.
+else
+	@$(CATALOGS) xmllint --noout --postvalid --xinclude tmp/${1}/xml/$(DOCNAME).xml
+endif
 	@echo "END: test-${1} `date`"
 endef
 
