fix PO file name missing from reports
git-svn-id: file:///srv/svn/publican/trunk@210 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/docs/Makefile
+++ b/publican/content/docs/Makefile
@@ -17,6 +17,7 @@ PWD		= $(shell pwd)
 ifeq "$(STANDALONE)" "0" 
 COMMON_CONFIG  = /usr/share/publican
 else
+DESKTOP		= 1
 COMMON_CONFIG	= $(PWD)/../..
 CATALOGS	= XML_CATALOG_FILES="$(PWD)/../../xsl_extras/docbook/dtd-4.5/catalog.xml $(PWD)/../../xsl_extras/docbook/1.72.0/catalog.xml"
 XMLCLEAN	= $(PWD)/../../bin/xmlClean
