--- a/publican/make/Makefile.templates
+++ b/publican/make/Makefile.templates
@@ -3,7 +3,7 @@
 #    Copyright (C) 2008 Red Hat, Inc.
 #
 #    This program is free software; you can redistribute it and/or modify
-#    it under the terms of the GNU General Public License as published by
+#    it under the terms of theElement GNU General Public License as published by
 #    the Free Software Foundation; either version 2 of the License, or
 #    (at your option) any later version.
 #
@@ -213,10 +213,12 @@ ifeq "${1}" "pdf"
 			$(CATALOGS) xsltproc  --stringparam toc.section.depth "$(TOC_SECTION_DEPTH)" --stringparam chunk.section.depth "$(CHUNK_SECTION_DEPTH)" --stringparam confidential ${CONFIDENTIAL} --stringparam l10n.gentext.language "$$(GENLANG)" --stringparam show.comments $(SHOW_REMARKS) --stringparam fop.extensions "0" --stringparam fop1.extensions "1" --stringparam admon.graphics.extension ".png" --xinclude -o $(DOCNAME).fo $$$$xsl_file $(DOCNAME).xml ;\
 		fi; \
 		if [ ! -f $(COMMON_CONFIG)/fop/fop-$$$$fop_ver.xconf ]; then \
-			echo "ERROR: config file for FOP version '$$$$fop_ver' not found"; \
-			exit 1; \
+			echo "WARNING: config file for FOP version '$$$$fop_ver' not found! Attempting to use default config file."; \
+			fop_file=fop.xconf; \
+		else \
+			fop_file=fop-$$$$fop_ver.xconf; \
 		fi; \
-		fop -q -c $(COMMON_CONFIG)/fop/fop-$$$$fop_ver.xconf -fo $(DOCNAME).fo -pdf $(DOCNAME).pdf;
+		fop -q -c $(COMMON_CONFIG)/fop/$$$$fop_file -fo $(DOCNAME).fo -pdf $(DOCNAME).pdf;
 	@mv -f tmp/${2}/xml/$(DOCNAME).${1} tmp/${2}/${1}/.
 else
 ifeq "${1}" "html-single"
