PDF format overrides
git-svn-id: file:///srv/svn/publican/trunk@237 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-redhat/make/Makefile.RedHat
+++ b/publican-redhat/make/Makefile.RedHat
@@ -35,3 +35,9 @@ SUB_SPEC_XSL	= $(COMMON_CONFIG)/xsl/sub_package2.xsl
 endif
 endif
 
+pre::
+	@if [[ "$(PRODUCT)" == "Documentation" ]]; then \
+		echo "ERROR! You MUST set a valid PRODUCT to use the RedHat Brand!"; \
+		exit 3; \
+	fi
+
