--- a/publican-jboss/make/Makefile.JBoss
+++ b/publican-jboss/make/Makefile.JBoss
@@ -4,3 +4,9 @@ CATALOGS	= XML_CATALOG_FILES="$(COMMON_CONFIG)/xsl/docbook/dtd-4.5/catalog.xml $
 
 DOC_URL		= http://www.redhat.com/docs
 
+pre::
+	@if [[ "$(PRODUCT)" == "Documentation" ]]; then \
+		echo "ERROR! You MUST set a valid PRODUCT to use the JBoss Brand!"; \
+		exit 3; \
+	fi
+
