--- a/publican/make/Makefile.common
+++ b/publican/make/Makefile.common
@@ -32,6 +32,7 @@ TRANSLATIONS	= $(XML_LANG) $(OTHER_LANGS)
 EXTRA_DIRS	= $(shell find $(XML_LANG) -type d | grep -v CVS | grep -v '.svn' | grep -v images | sed -e 's/$(XML_LANG)//g'| sed -e 's/^\///g')
 PRODUCT		?= Documentation
 FORMATS		= html htmlhelp html-single pdf txt eclipse
+STRICT		?= 0
 
 ###############################################################################
 ###############################################################################
