--- a/publican/make/Makefile.templates
+++ b/publican/make/Makefile.templates
@@ -28,7 +28,7 @@ EMBEDTOC	?= 0
 BRAND		?= common
 DOC_URL		?= https://fedorahosted.org/publican
 DESKTOP		?= 0
-XMLCLEAN	?= xmlClean
+XMLCLEAN	?= xmlClean -strict $(STRICT)
 
 ###############################################################################
 # ALL_Template
@@ -85,7 +85,7 @@ define	XML_Template
 .PHONY:	xml-${1}
 xml-${1}:: pre
 ifeq "${1}" "$(findstring ${1},$(IGNORED_TRANSLATIONS))"
-xml-${1}:: xml
+xml-${1}:: xml-$(XML_LANG)
 endif
 	@echo "START: xml-${1} `date`"
 	-@mkdir -p tmp/${1}/xml_tmp
@@ -141,6 +141,7 @@ endif
 	@if [ -d ${1}/images ]; then cp -rf ${1}/images tmp/${1}/xml/.; fi
 # copy extras
 	@if [ -d $(XML_LANG)/extras ]; then cp -rf $(XML_LANG)/extras tmp/${1}/xml/.; fi
+	@if [ -d ${1}/extras ]; then cp -rf ${1}/extras tmp/${1}/xml/.; fi
 	@if [ 1 ]; then \
 		if [ "$(ARCH)" != "" ]; then \
 			args=`echo "-arch $(ARCH)"`; \
@@ -225,6 +226,9 @@ ifeq "${1}" "html-single"
 # Copy original images to output dir, then copy any translated images over the top
 	-@cp -rf tmp/${2}/xml/images  tmp/${2}/${1}/.
 	-@cp -rf tmp/${2}/xml/Common_Content  tmp/${2}/${1}/.
+# copy files
+	@if [ -d $(XML_LANG)/files ]; then cp -rf $(XML_LANG)/files tmp/${2}/${1}/.; fi
+	@if [ -d ${1}/files ]; then cp -rf ${1}/files tmp/${2}${1}/.; fi
 	@find tmp/${2}/${1}/Common_Content -name '*.xml' | xargs rm -rf
 else
 	@cd tmp/${2}/${1}; \
@@ -233,6 +237,9 @@ else
 # Copy original images to output dir, then copy any translated images over the top
 	-@cp -rf tmp/${2}/xml/images  tmp/${2}/${1}/.
 	-@cp -rf tmp/${2}/xml/Common_Content  tmp/${2}/${1}/.
+# copy files
+	@if [ -d $(XML_LANG)/files ]; then cp -rf $(XML_LANG)/files tmp/${2}/${1}/.; fi
+	@if [ -d ${1}/files ]; then cp -rf ${1}/files tmp/${2}${1}/.; fi
 	@find tmp/${2}/${1}/Common_Content -name '*.xml' | xargs rm -rf
 endif
 endif
