get fop 0.95Beta working
git-svn-id: file:///srv/svn/publican/trunk@264 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/make/Makefile.templates
+++ b/publican/make/Makefile.templates
@@ -216,6 +216,7 @@ ifeq "${1}" "pdf"
 		else \
 			fop_file=fop-$$$$fop_ver.xconf; \
 		fi; \
+		echo "fop -q -c $(COMMON_CONFIG)/fop/$$$$fop_file -fo $(DOCNAME).fo -pdf $(DOCNAME).pdf"; \
 		fop -q -c $(COMMON_CONFIG)/fop/$$$$fop_file -fo $(DOCNAME).fo -pdf $(DOCNAME).pdf;
 	@mv -f tmp/${2}/xml/$(DOCNAME).${1} tmp/${2}/${1}/.
 else
